<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/start_delete_mode">
        <item
            android:id="@+id/action_start_delete_mode"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/start_delete_mode"
            app:showAsAction="always" />
    </group>

    <group android:id="@+id/delete_mode">
        <item
            android:id="@+id/action_mark_all_delete"
            android:icon="@android:drawable/checkbox_on_background"
            android:title="@string/mark_all_delete"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_end_delete_mode"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/delete"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_cancel_delete_mode"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/cancel_delete"
            app:showAsAction="always" />
    </group>
</menu>